--- a/src/assets/scss/Footer.scss
+++ b/src/assets/scss/Footer.scss
@@ -110,9 +110,10 @@
   .copyright {
     text-align: center;
     font-size: 1.6rem;
-    line-height: 10rem;
+    line-height: 1.6rem;
     letter-spacing: -0.02em;
     color: #181433;
+    padding: 5rem 0 5rem 0;
   }
 }
 
@@ -227,7 +228,7 @@
     .copyright {
       text-align: center;
       font-size: 1.6rem;
-      line-height: 10rem;
+      line-height: 2rem;
       letter-spacing: -0.02em;
       color: #181433;
     }
